# jafarvis

./: .gitignore  Cargo.toml
crates/apip/: Cargo.toml
crates/apip/src/: capture.rs  chunker.rs  error.rs  input.rs  lib.rs  main.rs  resample.rs  vad.rs
crates/asr/: Cargo.toml  build.rs
crates/asr/src/: error.rs  lib.rs  transcriber.rs  whisper_ffi.rs
crates/asr/tests/: transcription.rs
crates/wuw/: Cargo.toml
crates/wuw/src/: error.rs  lib.rs  openwakeword.rs  trigger.rs  wuw.rs
crates/wuw/tests/: detection.rs
models/: download.sh
