[workspace]
resolver = "2"
members = ["crates/apip", "crates/wuw", "crates/asr"]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
thiserror = "2.0.18"
chrono = "0.4.44"
tokio = { version = "1", features = ["full"] }
ort = { version = "2.0.0-rc.12", features = ["ndarray"] }
ndarray = "0.17.2"
