[package]
name = "apip"
version.workspace = true
edition.workspace = true

[dependencies]
cpal = "0.17.3"
thiserror = { workspace = true }
rubato = "2.0.0"
audioadapter-buffers = "3.0.0"
ort = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
ndarray = { workspace = true }
